--- a/java/openmldb-feature-platform/frontend/src/locales/en.json
+++ b/java/openmldb-feature-platform/frontend/src/locales/en.json
@@ -81,7 +81,7 @@
     "Search": "Search",
     "Latest Version": "Latest Version",
     "Features Service Versions": "Features Service Versions",
-    "Update Latest Version": "Update Latest Version",
+    "Update Version": "Update Version",
     "Latest": "Latest",
     "Not Latest": "Not Latest",
     "Display More Options": "Display More Options",
