--- a/java/openmldb-feature-platform/frontend/src/locales/zh.json
+++ b/java/openmldb-feature-platform/frontend/src/locales/zh.json
@@ -81,7 +81,7 @@
     "Search": "搜索",
     "Latest Version": "最新版本",
     "Features Service Versions": "特征服务版本",
-    "Update Latest Version": "更新最新版本",
+    "Update Version": "更新版本",
     "Latest": "最新", 
     "Not Latest": "非最新",
     "Display More Options": "显示更多选项",
